// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`letter 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`letter 'b' conditional success tests AST matches snapshot 1`] = `"b"`;

exports[`letter 'z' conditional success tests AST matches snapshot 1`] = `"z"`;

exports[`letter '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`letters 'bb' conditional success tests AST matches snapshot 1`] = `"bb"`;

exports[`letters 'zz' conditional success tests AST matches snapshot 1`] = `"zz"`;

exports[`letters '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter 'a' conditional success tests AST matches snapshot 2`] = `"a"`;

exports[`letter 'b' conditional success tests AST matches snapshot 2`] = `"b"`;

exports[`letter 'z' conditional success tests AST matches snapshot 2`] = `"z"`;

exports[`letter 'こ' conditional success tests AST matches snapshot 1`] = `"こ"`;

exports[`letter '你' conditional success tests AST matches snapshot 1`] = `"你"`;

exports[`letter '#' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter ' ' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter '' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters 'a' conditional success tests AST matches snapshot 2`] = `"a"`;

exports[`letters 'bb' conditional success tests AST matches snapshot 2`] = `"bb"`;

exports[`letters 'zz' conditional success tests AST matches snapshot 2`] = `"zz"`;

exports[`letters 'こんにちは' conditional success tests AST matches snapshot 1`] = `"こんにちは"`;

exports[`letters '你叫什么名字' conditional success tests AST matches snapshot 1`] = `"你叫什么名字"`;

exports[`letters '#' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters ' ' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters '' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter 'a' conditional success tests AST matches snapshot 3`] = `"a"`;

exports[`letter 'b' conditional success tests AST matches snapshot 3`] = `"b"`;

exports[`letter 'z' conditional success tests AST matches snapshot 3`] = `"z"`;

exports[`letter 'こ' conditional success tests AST matches snapshot 2`] = `"こ"`;

exports[`letter '你' conditional success tests AST matches snapshot 2`] = `"你"`;

exports[`letter '1' conditional success tests AST matches snapshot 1`] = `"1"`;

exports[`letter '#' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter ' ' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter '' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters 'a' conditional success tests AST matches snapshot 3`] = `"a"`;

exports[`letters 'bb' conditional success tests AST matches snapshot 3`] = `"bb"`;

exports[`letters 'zz' conditional success tests AST matches snapshot 3`] = `"zz"`;

exports[`letters 'こんにちは' conditional success tests AST matches snapshot 2`] = `"こんにちは"`;

exports[`letters '你叫什么名字' conditional success tests AST matches snapshot 2`] = `"你叫什么名字"`;

exports[`letters 'こんにちは123' conditional success tests AST matches snapshot 1`] = `"こんにちは123"`;

exports[`letters '你叫什么名字123' conditional success tests AST matches snapshot 1`] = `"你叫什么名字123"`;

exports[`letters '#' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters ' ' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters '' conditional failure tests Error matches snapshot 3`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter 'こ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter '你' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters 'こんにちは' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters '你叫什么名字' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetter 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`unicodeLetter 'b' conditional success tests AST matches snapshot 1`] = `"b"`;

exports[`unicodeLetter 'z' conditional success tests AST matches snapshot 1`] = `"z"`;

exports[`unicodeLetter 'こ' conditional success tests AST matches snapshot 1`] = `"こ"`;

exports[`unicodeLetter '你' conditional success tests AST matches snapshot 1`] = `"你"`;

exports[`unicodeLetter '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetter ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetter '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetters 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`unicodeLetters 'bb' conditional success tests AST matches snapshot 1`] = `"bb"`;

exports[`unicodeLetters 'zz' conditional success tests AST matches snapshot 1`] = `"zz"`;

exports[`unicodeLetters 'こんにちは' conditional success tests AST matches snapshot 1`] = `"こんにちは"`;

exports[`unicodeLetters '你叫什么名字' conditional success tests AST matches snapshot 1`] = `"你叫什么名字"`;

exports[`unicodeLetters '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetters ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeLetters '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "multiple unicode letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`unicodeAlphanumeric 'b' conditional success tests AST matches snapshot 1`] = `"b"`;

exports[`unicodeAlphanumeric 'z' conditional success tests AST matches snapshot 1`] = `"z"`;

exports[`unicodeAlphanumeric 'こ' conditional success tests AST matches snapshot 1`] = `"こ"`;

exports[`unicodeAlphanumeric '你' conditional success tests AST matches snapshot 1`] = `"你"`;

exports[`unicodeAlphanumeric '1' conditional success tests AST matches snapshot 1`] = `"1"`;

exports[`unicodeAlphanumeric '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a unicode alphanumeric character",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric 'a' conditional success tests AST matches snapshot 2`] = `"a"`;

exports[`unicodeAlphanumeric 'bb' conditional success tests AST matches snapshot 1`] = `"bb"`;

exports[`unicodeAlphanumeric 'zz' conditional success tests AST matches snapshot 1`] = `"zz"`;

exports[`unicodeAlphanumeric 'こんにちは' conditional success tests AST matches snapshot 1`] = `"こんにちは"`;

exports[`unicodeAlphanumeric '你叫什么名字' conditional success tests AST matches snapshot 1`] = `"你叫什么名字"`;

exports[`unicodeAlphanumeric 'こんにちは123' conditional success tests AST matches snapshot 1`] = `"こんにちは123"`;

exports[`unicodeAlphanumeric '你叫什么名字123' conditional success tests AST matches snapshot 1`] = `"你叫什么名字123"`;

exports[`unicodeAlphanumeric '#' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric ' ' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`unicodeAlphanumeric '' conditional failure tests Error matches snapshot 2`] = `
{
  "expected": [
    "multiple unicode alphanumeric characters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
